java.toolchain.languageVersion = JavaLanguageVersion.of(16)

archivesBaseName = 'wt-core'

dependencies {
    api project(":common")
    api 'org.gradle:gradle-tooling-api:4.10.3'
    api 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
    api 'org.apache.logging.log4j:log4j-jul:2.14.1'

    runtimeOnly project(':forge')
    runtimeOnly project(':gradle')
    runtimeOnly project(':intellij')
    runtimeOnly project(':minecraft')
    runtimeOnly 'net.covers1624:GradleStuff:3.0.0.9'
    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.14.1'
}

publishing {
    publications {
        publication(MavenPublication) {
            artifactId archivesBaseName

            from components['java']
        }
    }
}

